[package]
name = "monolith"
version = "2.8.3"
authors = [
    "Sunshine <snshn@tutanota.com>",
    "Mahdi Robatipoor <mahdi.robatipoor@gmail.com>",
    "Emmanuel Delaborde <th3rac25@gmail.com>",
    "Emi Simpson <emi@alchemi.dev>",
    "rhysd <lin90162@yahoo.co.jp>",
    "Andriy Rakhnin <a@rakhnin.com>",
]
edition = "2021"
description = "CLI tool for saving web pages as a single HTML file"
homepage = "https://github.com/Y2Z/monolith"
repository = "https://github.com/Y2Z/monolith"
readme = "README.md"
keywords = ["web", "http", "html", "download", "command-line"]
categories = ["command-line-utilities", "web-programming"]
include = [
    "src/*.rs",
    "Cargo.toml",
]
license = "CC0-1.0"

[features]
default = ["vendored-openssl"]
# Compile and statically link a copy of OpenSSL.
vendored-openssl = ["openssl/vendored"]

[dependencies]
atty = "0.2.14"  # Used for highlighting network errors
base64 = "0.22.1"  # Used for integrity attributes
chrono = "0.4.38"  # Used for formatting output timestamp
clap = "3.2.25"  # Used for processing CLI arguments
cssparser = "0.34.0"  # Used for dealing with CSS
encoding_rs = "0.8.34"  # Used for parsing and converting document charsets
html5ever = "0.27.0"  # Used for all things DOM
markup5ever_rcdom = "0.3.0"  # Used for manipulating DOM
percent-encoding = "2.3.1"  # Used for encoding URLs
sha2 = "0.10.8"  # Used for calculating checksums during integrity checks
url = "2.5.2"  # Used for parsing URLs
openssl = "0.10.64" # Used for static linking of the OpenSSL library

# Used for parsing srcset and NOSCRIPT
[dependencies.regex]
version = "1.10.6"
default-features = false
features = ["std", "perf-dfa", "unicode-perl"]

# Used for making network requests
[dependencies.reqwest]
version = "0.12.7"
default-features = false
features = ["default-tls", "blocking", "gzip", "brotli", "deflate"]

[dev-dependencies]
assert_cmd = "2.0.16"
