[package]
name = "monolith"
version = "2.11.0"
authors = [
    "Sunshine <snshn@tutanota.com>",
    "Mahdi Robatipoor <mahdi.robatipoor@gmail.com>",
    "Emmanuel Delaborde <th3rac25@gmail.com>",
    "Emi Simpson <emi@alchemi.dev>",
    "rhysd <lin90162@yahoo.co.jp>",
    "Andriy Rakhnin <a@rakhnin.com>",
]
edition = "2021"
description = "CLI tool and library for saving web pages as a single HTML file"
homepage = "https://github.com/Y2Z/monolith"
repository = "https://github.com/Y2Z/monolith"
readme = "README.md"
keywords = ["web", "http", "html", "download", "command-line"]
categories = ["command-line-utilities", "web-programming"]
include = ["src/*.rs", "Cargo.toml"]
license = "CC0-1.0"

[dependencies]
atty = "=0.2.14" # Used for highlighting network errors
base64 = "=0.22.1" # Used for integrity attributes
chrono = "=0.4.41" # Used for formatting timestamps
clap = { version = "=4.5.37", features = [
    "derive",
], optional = true } # Used for processing CLI arguments
cssparser = "=0.35.0" # Used for dealing with CSS
directories = { version = "=6.0.0", optional = true } # Used for GUI
druid = { version = "=0.8.3", optional = true } # Used for GUI
encoding_rs = "=0.8.35" # Used for parsing and converting document charsets
html5ever = "=0.29.1" # Used for all things DOM
markup5ever_rcdom = "=0.5.0-unofficial" # Used for manipulating DOM
percent-encoding = "=2.3.1" # Used for encoding URLs
sha2 = "=0.10.9" # Used for calculating checksums during integrity checks
redb = "=2.4.0" # Used for on-disk caching of remote assets
tempfile = { version = "=3.19.1", optional = true } # Used for on-disk caching of remote assets
url = "=2.5.4" # Used for parsing URLs
openssl = "=0.10.72" # Used for static linking of the OpenSSL library

# Used for unwrapping NOSCRIPT
[dependencies.regex]
version = "=1.11.1"
default-features = false
features = ["std", "perf-dfa", "unicode-perl"]

# Used for making network requests
[dependencies.reqwest]
version = "=0.12.15"
default-features = false
features = ["default-tls", "blocking", "gzip", "brotli", "deflate"]

[dev-dependencies]
assert_cmd = "=2.0.17"

[features]
default = ["cli", "vendored-openssl"]
cli = ["clap", "tempfile"] # Build a CLI tool that includes main() function
gui = [
    "directories",
    "druid",
    "tempfile",
] # Build a GUI executable that includes main() function
vendored-openssl = [
    "openssl/vendored",
] # Compile and statically link a copy of OpenSSL

[lib]
name = "monolith"
path = "src/lib.rs"

[[bin]]
name = "monolith"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "monolith-gui"
path = "src/gui.rs"
required-features = ["gui"]
